--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,24 +1,44 @@
 .super-mario {
   width: 200px;
+  top: 60px;
+  position: absolute;
+  z-index: 1;
 }
 
 .goomba {
   width: 100px;
+  position:absolute;
+  left: 80px;
+  top: 320px;
+  z-index: 2;
+
 }
 
 .baloon {
+  position:absolute;
+  z-index: 3;
+  left: 200px;
 
 }
 
 .speach {
   font-size: 25px;
+  position:absolute;
+  z-index: 4;
+  left: 230px;
+  top: 120px;
 }
 
 .bowser {
   width: 200px;
+  position:absolute;
+  z-index: 1;
+  left: 480px;
+  top: 260px;
 }
 
 /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
 .border {
+  border: 5px solid black
 
 }
